<resources>
    <string name="app_name">NavigationDrawerDemo</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="imageview">ImageView</string>
    <string name="sub_item">SubItem1</string>
    <string name="sub_item2">SubItem2</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="navigation">Navigation Drawer</string>
    <string name="text">TextView</string>

    <string name="call">Call</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>


</resources>
